17723
```scala
class A

class Foo extends A(22A, Bug!) {}
```
```scala
Test.scala:3: error: Invalid literal number
class Foo extends A(22A, Bug!) {}
                    ^
Test.scala:3: error: ')' expected but eof found.
class Foo extends A(22A, Bug!) {}
                                 ^
two errors found
```
